Fixed sky jumpcut on desktop/mobile transition

--- a/src/components/3-sections/app/app.scss
+++ b/src/components/3-sections/app/app.scss
@@ -70,9 +70,16 @@
     }
   }
 
-  &.initialize {
+  &.initializing {
     &::before {
       background-position: 0 -300vh;
+    }
+  }
+
+  &.initialized {
+    &::before {
+      background-position: 0 -300vh;
+      transition: none;
     }
   }
 }
